<resources>
    <string name="app_name">Myjob</string>
    <!-- SPLASH 1 -->
    <string name="splash1">CARI KERJA</string>
    <string name="splash2">Platform pencarian kerja terpopuler di Indonesia untuk para freelancer</string>

    <!-- Login -->
    <string name="login1">Email</string>
    <string name="login2">Password</string>
    <string name="login3">Belum memiliki akun ? Daftar</string>
    <string name="login4">Tombol login</string>

    <!-- Daftar -->
    <string name="daftar1">Nama</string>
    <string name="daftar2">Sudah memiliki akun ? Login</string>

    <!-- HomeFreelancer -->
    <string name="homefree1">Gambar</string>
    <string name="homefree2">Dapatkan pekerjaan anda hari ini</string>
    <string name="homefree3">JOBS</string>
    <string name="homefree4">Desain Logo</string>
    <string name="homefree5">Dibutuhkan freelancer yang menguasai adobe XD untuk membuat logo perusahaan Tebu Nasional</string>
    <string name="homefree6">Fee : Rp.5.000.000</string>
    <string name="homefree7">End : 25&#8211;08&#8211;2022</string>

    <!-- DetailFreelancer -->
    <string name="detailfree1">Design Logo</string>
    <string name="detailfree2">Deadline : 25&#8211;08&#8211;2022</string>
    <string name="detailfree3">Fee: Rp. 5000.000</string>
    <string name="detailfree4">Deskripsi Pekerjaan</string>
    <string name="detailfree5">Membutuhkan seorang Freelancer yang menguasai program adobe x dan adobe illustrator untuk mendesain sebuah logo gambar perusahaan kami yang bergerak di bidang pengolahan hasil budidaya Tebu.</string>
    <string name="detailfree6">Bidder:</string>
    <string name="detailfree7">-</string>
    <string name="detailfree8">Applied</string>
    <string name="detailfree9">Lihat Bidder</string>


    <!-- SingleJob -->
    <string name="singlejob1">Fee : Rp %1$s</string>
    <string name="singlejob2">Deadline : %1$s</string>

    <!-- Bottom menu -->
    <string name="bmenu1">Home</string>
    <string name="bmenu2">Chat</string>
    <string name="bmenu3">Akun</string>
    <string name="bmenu4">Help</string>

    <!-- SEEKER -->
    <string name="seeker1">MYJOB</string>
    <string name="seeker2">Cari Freelancer untuk projectmu hari ini!</string>


    <string-array name="freelance">
        <item>Job Seeker</item>
        <item>Business Owner</item>
    </string-array>

    <string-array name="skill">
        <item>Graphic Designer</item>
        <item>Video Editor</item>
        <item>Motion Designer</item>
        <item>Photo Product</item>
        <item>Programmer</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>