<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dash"
    tools:context=".Daftar">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="130dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20sp"
        android:elevation="10sp"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12sp"
                android:autofillHints="name"
                android:hint="@string/daftar1"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12sp"
                android:autofillHints="emailAddress"
                android:hint="@string/login1"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="12sp"
                android:autofillHints="password"
                android:hint="@string/login2"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="12sp"
                android:entries="@array/freelance"
                android:minHeight="48dp"
                android:tooltipText="Tipe" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="12sp"
                android:entries="@array/skill"
                android:minHeight="48dp"
                android:tooltipText="Tipe" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:contentDescription="@string/login4"
                app:srcCompat="@drawable/btn_login"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="376dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/daftar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>